--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,8 +66,10 @@ jobs:
     - name: Install Playwright browsers
       run: npx playwright install --with-deps
     
-    - name: Run E2E tests
-      run: npm run test:e2e
+    - name: Run E2E tests (Chromium)
+      env:
+        NODE_OPTIONS: "--no-warnings"
+      run: npx playwright test --project=chromium
     
     - name: Upload Playwright report
       uses: actions/upload-artifact@v4
