--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,7 +62,10 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-    
+
+    - name: Build application for preview
+      run: npm run build
+
     - name: Install Playwright browsers
       run: npx playwright install --with-deps
     
